--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Air Freight">
                         </div>
                         <div class="transport-text">
-                            <h3>Air Freight</h3>
+                            <h3>Air Cargo from UAE</h3>
                             <p>Speedy air freight solutions for time-critical shipments to global destinations.</p>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Road Freight">
                         </div>
                         <div class="transport-text">
-                            <h3>Road Freight</h3>
+                            <h3>Road Freight in UAE</h3>
                             <p>Flexible and secure land transportation for GCC and neighboring countries.</p>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Ocean Freight">
                         </div>
                         <div class="transport-text">
-                            <h3>Ocean Freight</h3>
+                            <h3>Ocean Cargo from UAE</h3>
                             <p>Cost-effective sea freight services for large volumes, ensuring reliability and transparency.</p>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Customs Clearance Support">
                         </div>
                         <div class="transport-text">
-                            <h3>Customs Clearance Support</h3>
+                            <h3>Customs Clearance Support in UAE</h3>
                             <p>Expert handling of customs procedures, ensuring hassle-free shipments.</p>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Door-to-Door Services">
                         </div>
                         <div class="transport-text">
-                            <h3>Door-to-Door Services</h3>
+                            <h3>Cargo Door-to-Door Services from UAE</h3>
                             <p>Comprehensive delivery solutions from UAE to your desired location.</p>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                             <img src="https://arsal646.github.io/alBahrShipping/assets/img/services/1.jpg" alt="Warehouse Solutions">
                         </div>
                         <div class="transport-text">
-                            <h3>Warehouse Solutions</h3>
+                            <h3>Warehouse Solutions in UAE</h3>
                             <p>Secure and spacious warehousing facilities to manage your storage needs effectively.</p>
                         </div>
                     </div>
