--- a/shipping_to_page.html
+++ b/shipping_to_page.html
@@ -174,9 +174,11 @@
 
 <body>
 <div class="planner">
-        <div >
-             Below are some section ideas.
-        </div>
+  <div style="padding: 5px;">
+    Our goal is to add sections that answer common shipping queries on Google related to specific country.
+</div>
+
+
 </div>
   <div class="container">
     <h1>International Shipping from India - Content Outline with Search Queries</h1>
